--- a/index.html
+++ b/index.html
@@ -35,10 +35,17 @@
 
 ---
 
-# 革命の第一歩
-我々が足を踏み入れたのはうんぬんかんぬん
+たいていの人はほんとうになにがほしいのか、
 
----
+心の中でわかっています。
+
+人生の目標を教えてくれるのは直感だけ。
+
+ただ、それに耳を傾けない人が多すぎるのです。
+
+ 
+
+-　バーバラ・ブラハム　-
 
 
 
